Home Page profile page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
  <!-- Link Swiper's CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-<link rel="stylesheet" href="sidebar.css">
+
 <link rel="stylesheet" href="home.css">
 <link rel="stylesheet" href="sidebar-nav.css">
 
@@ -27,7 +27,7 @@
         </div>
         <div class="menu-container">
           
-          <li class="liNavbar active">Home</li>
+          <a href="index.html"><li class="liNavbar active">Home</li></a>
           <li class="liNavbar">Movies</li>
           <li class="liNavbar">Series</li>
         </div>
