--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <span class="fas fa-bell"></span>
           </div>
           <div>
-            <img id="user-picture" src="user.png" alt="" />
+            <img id="user-picture" src="images/user.png" alt="" />
             <i class="fas fa-caret-down"></i>
           </div>
         </div>
