--- a/pages/login.html
+++ b/pages/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineMax Registration</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../assets/styles/login.css">
 </head>
 <body>
     <div class="container">
@@ -14,7 +14,7 @@
                 <p>Semper in cursus magna et eu varius nunc adipiscing. Elementum justo, laoreet sit sem semper parturient.</p>
             </div>
             <div class="video-preview">
-                <img src="./signUpImage.png" alt="Video Preview">
+                <img src="../assets/images/signUpImage.png" alt="Video Preview">
             </div>
         </div>
         <div class="right-section">
