--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineMax Registration</title>
-    <link rel="stylesheet" href="./signUp.css">
+    <link rel="stylesheet" href="../assets/styles/signUp.css">
 </head>
 <body>
     <div class="container">
@@ -14,7 +14,7 @@
                 <p>Semper in cursus magna et eu varius nunc adipiscing. Elementum justo, laoreet sit sem semper parturient.</p>
             </div>
             <div class="video-preview">
-                <img src="./signUpImage.png" alt="Video Preview">
+                <img src="../assets/images/signUpImage.png" alt="Video Preview">
             </div>
         </div>
         <div class="right-section">
@@ -38,7 +38,7 @@
                         <input type="password" id="confirm-password" name="confirm-password" placeholder="Enter your password">
                     </div>
                     <button type="submit" class="login-button">Register</button><br><br>
-                    <p class="login-text">Already have an account? <a href="./index.html">Login</a></p>
+                    <p class="login-text">Already have an account? <a href="./login.html">Login</a></p>
                 </form>
             </div>
         </div>
