Home Page profile page

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -9,8 +9,8 @@
  <!-- Link Swiper's CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-<link rel="stylesheet" href="profile.css">
-<link rel="stylesheet" href="sidebar-nav.css">
+<link rel="stylesheet" href="../assets/styles/profile.css">
+<link rel="stylesheet" href="../assets/styles/sidebar-nav.css">
 
 
 </head>
@@ -27,7 +27,7 @@
         </div>
         <div class="menu-container">
           
-          <a href="index.html"><li class="liNavbar active">Home</li></a>
+          <a href="../index.html"><li class="liNavbar active">Home</li></a>
           <li class="liNavbar">Movies</li>
           <li class="liNavbar">Series</li>
         </div>
@@ -38,7 +38,7 @@
             <span class="fas fa-bell"></span>
           </div>
           <div>
-            <img id="user-picture" src="images/username.png" alt="" />
+            <img id="user-picture" src="../assets/images/username.png" alt="" />
             <i class="fas fa-caret-down"></i>
           </div>
           
@@ -87,7 +87,7 @@
               <form action="">
 
                 <div class="profile-picture">
-                  <img src="images/adminIcon.jpg" alt="User Picture">
+                  <img src="../assets/images/adminIcon.jpg" alt="User Picture">
                   <i class="fas fa-camera"></i>
                 </div>
               <div class="form-row">
@@ -194,8 +194,8 @@
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-<script src="sidebar.js"></script>
-<script src="home.js"></script>
+<script src="../assets/scripts/sidebar.js"></script>
+<script src="../assets/scripts/home.js"></script>
 
 
 </body>
