--- a/pages/Movie detiles.html
+++ b/pages/Movie detiles.html
@@ -20,7 +20,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../assets/styles/MovieDetiles.css" />
   </head>
   <body>
     <!-- navbar -->
@@ -43,7 +43,7 @@
             <span class="fas fa-bell"></span>
           </div>
           <div>
-            <img id="user-picture" src="images/user.png" alt="" />
+            <img id="user-picture" src="../assets/images/user.png" alt="" />
             <i class="fas fa-caret-down"></i>
           </div>
         </div>
@@ -66,7 +66,7 @@
           margin-top: 3rem;
         "
       >
-        <img src="images/Video.png" class="card-img-top" alt="..." />
+        <img src="../assets/images/Video.png" class="card-img-top" alt="..." />
         <div class="card-body d-flex justify-content-center align-items-center">
           <div class="container text-center">
             <div class="row">
@@ -218,16 +218,16 @@
                   <i class="bi bi-arrow-left-circle-fill"></i>
                 </button>
                 <ul class="image-list">
-                  <img class="image-item" src="images/img3.png" alt="img-1" />
-                  <img class="image-item" src="images/img2.png" alt="img-2" />
-                  <img class="image-item" src="images/img1.png" alt="img-3" />
-                  <img class="image-item" src="images/img3.png" alt="img-4" />
-                  <img class="image-item" src="images/img2.png" alt="img-5" />
-                  <img class="image-item" src="images/img1.png" alt="img-6" />
-                  <img class="image-item" src="images/img3.png" alt="img-7" />
-                  <img class="image-item" src="images/img2.png" alt="img-8" />
-                  <img class="image-item" src="images/img1.png" alt="img-9" />
-                  <img class="image-item" src="images/img3.png" alt="img-10" />
+                  <img class="image-item" src="../assets/images/img3.png" alt="img-1" />
+                  <img class="image-item" src="../assets/images/img2.png" alt="img-2" />
+                  <img class="image-item" src="../assets/images/img1.png" alt="img-3" />
+                  <img class="image-item" src="../assets/images/img3.png" alt="img-4" />
+                  <img class="image-item" src="../assets/images/img2.png" alt="img-5" />
+                  <img class="image-item" src="../assets/images/img1.png" alt="img-6" />
+                  <img class="image-item" src="../assets/images/img3.png" alt="img-7" />
+                  <img class="image-item" src="../assets/images/img2.png" alt="img-8" />
+                  <img class="image-item" src="../assets/images/img1.png" alt="img-9" />
+                  <img class="image-item" src="../assets/images/img3.png" alt="img-10" />
                 </ul>
                 <button
                   id="next-slide"
@@ -336,7 +336,7 @@
               <div class="row" style="display: flex">
                 <!-- --------- user img start --------- -->
                 <div class="col" style="flex-basis: 1%">
-                  <img class="comments-user" src="images/user.png" alt="" />
+                  <img class="comments-user" src="../assets/images/user.png" alt="" />
                 </div>
                 <!-- --------- user img end --------- -->
 
@@ -415,7 +415,7 @@
               <div class="row" style="display: flex">
                 <!-- --------- user img start --------- -->
                 <div class="col" style="flex-basis: 1%">
-                  <img class="comments-user" src="user.png" alt="" />
+                  <img class="comments-user" src="../assets/images/user.png" alt="" />
                 </div>
                 <!-- --------- user img end --------- -->
 
@@ -493,7 +493,7 @@
               <div class="row" style="display: flex">
                 <!-- --------- user img start --------- -->
                 <div class="col" style="flex-basis: 1%">
-                  <img class="comments-user" src="images/user.png" alt="" />
+                  <img class="comments-user" src="../assets/images/user.png" alt="" />
                 </div>
                 <!-- --------- user img end --------- -->
 
@@ -578,8 +578,8 @@
 
     <!-- ======= Movie detiles end =========== -->
 
-    <script src="sidebar.js"></script>
-        <script src="Coming Soon.js"></script>
+    <script src="../assets/scripts/sidebar.js"></script>
+        <script src="../assets/scripts/Coming Soon.js"></script>
 
   </body>
 </html>
