--- a/pages/Movie detiles.html
+++ b/pages/Movie detiles.html
@@ -218,16 +218,56 @@
                   <i class="bi bi-arrow-left-circle-fill"></i>
                 </button>
                 <ul class="image-list">
-                  <img class="image-item" src="../assets/images/img3.png" alt="img-1" />
-                  <img class="image-item" src="../assets/images/img2.png" alt="img-2" />
-                  <img class="image-item" src="../assets/images/img1.png" alt="img-3" />
-                  <img class="image-item" src="../assets/images/img3.png" alt="img-4" />
-                  <img class="image-item" src="../assets/images/img2.png" alt="img-5" />
-                  <img class="image-item" src="../assets/images/img1.png" alt="img-6" />
-                  <img class="image-item" src="../assets/images/img3.png" alt="img-7" />
-                  <img class="image-item" src="../assets/images/img2.png" alt="img-8" />
-                  <img class="image-item" src="../assets/images/img1.png" alt="img-9" />
-                  <img class="image-item" src="../assets/images/img3.png" alt="img-10" />
+                  <img
+                    class="image-item"
+                    src="../assets/images/img3.png"
+                    alt="img-1"
+                  />
+                  <img
+                    class="image-item"
+                    src="../assets/images/img2.png"
+                    alt="img-2"
+                  />
+                  <img
+                    class="image-item"
+                    src="../assets/images/img1.png"
+                    alt="img-3"
+                  />
+                  <img
+                    class="image-item"
+                    src="../assets/images/img3.png"
+                    alt="img-4"
+                  />
+                  <img
+                    class="image-item"
+                    src="../assets/images/img2.png"
+                    alt="img-5"
+                  />
+                  <img
+                    class="image-item"
+                    src="../assets/images/img1.png"
+                    alt="img-6"
+                  />
+                  <img
+                    class="image-item"
+                    src="../assets/images/img3.png"
+                    alt="img-7"
+                  />
+                  <img
+                    class="image-item"
+                    src="../assets/images/img2.png"
+                    alt="img-8"
+                  />
+                  <img
+                    class="image-item"
+                    src="../assets/images/img1.png"
+                    alt="img-9"
+                  />
+                  <img
+                    class="image-item"
+                    src="../assets/images/img3.png"
+                    alt="img-10"
+                  />
                 </ul>
                 <button
                   id="next-slide"
@@ -246,19 +286,6 @@
         </div>
         <!-- ========== Recommendatiion end ======== -->
 
-        <br /><br />
-
-        <!-- ---------- Line start --------------- -->
-        <div
-          class="card"
-          style="
-            width: 56.5rem;
-            background-color: #ffffff;
-            margin: 0 auto;
-            height: 2px;
-          "
-        ></div>
-        <!-- ---------- Line end --------------- -->
         <br /><br />
 
         <!-- ========== Reviews start ======== -->
@@ -336,7 +363,11 @@
               <div class="row" style="display: flex">
                 <!-- --------- user img start --------- -->
                 <div class="col" style="flex-basis: 1%">
-                  <img class="comments-user" src="../assets/images/user.png" alt="" />
+                  <img
+                    class="comments-user"
+                    src="../assets/images/user.png"
+                    alt=""
+                  />
                 </div>
                 <!-- --------- user img end --------- -->
 
@@ -399,6 +430,7 @@
                 <div
                   class="card"
                   style="
+                    width: 50rem;
                     background-color: rgb(255, 255, 255, 0.75);
                     margin: 0 auto;
                     height: 0.25px;
@@ -415,7 +447,11 @@
               <div class="row" style="display: flex">
                 <!-- --------- user img start --------- -->
                 <div class="col" style="flex-basis: 1%">
-                  <img class="comments-user" src="../assets/images/user.png" alt="" />
+                  <img
+                    class="comments-user"
+                    src="../assets/images/user.png"
+                    alt=""
+                  />
                 </div>
                 <!-- --------- user img end --------- -->
 
@@ -477,6 +513,7 @@
                 <div
                   class="card"
                   style="
+                    width: 50rem;
                     background-color: rgb(255, 255, 255, 0.75);
                     margin: 0 auto;
                     height: 0.25px;
@@ -493,7 +530,11 @@
               <div class="row" style="display: flex">
                 <!-- --------- user img start --------- -->
                 <div class="col" style="flex-basis: 1%">
-                  <img class="comments-user" src="../assets/images/user.png" alt="" />
+                  <img
+                    class="comments-user"
+                    src="../assets/images/user.png"
+                    alt=""
+                  />
                 </div>
                 <!-- --------- user img end --------- -->
 
@@ -553,11 +594,11 @@
               <br />
 
               <!-- ---------- Line start --------------- -->
-
               <div class="col">
                 <div
                   class="card"
                   style="
+                    width: 50rem;
                     background-color: rgb(255, 255, 255, 0.75);
                     margin: 0 auto;
                     height: 0.25px;
@@ -574,12 +615,34 @@
 
         <!-- ========== Reviews end ======== -->
       </div>
+      <!-- ======= Movie detiles end =========== -->
+
+      <!-- ================ footer ============= -->
+      <footer
+        class="text-center text-white py-3 mt-auto"
+        style="box-shadow: 1px 1px 1px #000000"
+      >
+        <div class="container">
+          <!-- Social media icons -->
+          <a class="btn btn-link btn-floating btn-lg text-white m-1" href="#!"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+          <a class="btn btn-link btn-floating btn-lg text-white m-1" href="#!"
+            ><i class="fab fa-twitter"></i
+          ></a>
+          <a class="btn btn-link btn-floating btn-lg text-white m-1" href="#!"
+            ><i class="fab fa-google"></i
+          ></a>
+          <a class="btn btn-link btn-floating btn-lg text-white m-1" href="#!"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <!-- Copyright notice -->
+          <div style="color: whitesmoke">© 2024 anime movie.com</div>
+        </div>
+      </footer>
     </div>
 
-    <!-- ======= Movie detiles end =========== -->
-
     <script src="../assets/scripts/sidebar.js"></script>
-        <script src="../assets/scripts/Coming Soon.js"></script>
-
+    <script src="../assets/scripts/Coming Soon.js"></script>
   </body>
 </html>
