--- a/pages/login.html
+++ b/pages/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineMax Registration</title>
     <link rel="stylesheet" href="../assets/styles/login.css">
+    <script type="module" src="../assets/scripts/firebaseauth.js"></script>
 </head>
 <body>
     <div class="container">
@@ -33,6 +34,8 @@
                     <button type="submit" class="login-button">Login</button><br><br>
                     <p class="login-text">Don't have an account? <a href="./signUp.html">Register</a></p>
                 </form>
+                <div id="loginMessage" class="messageDiv" style="display: none; background-color: green; color: white; "></div>
+
             </div>
         </div>
     </div>
