--- a/pages/Movie detiles.html
+++ b/pages/Movie detiles.html
@@ -56,7 +56,7 @@
     <!-- containar -->
     <!-- ======= Movie detiles start =========== -->
     <div class="containar">
-      <!-- Movie details start -->
+      <!-- ----------------------Movie details start---------------- -->
       <div
         class="card"
         style="
@@ -66,11 +66,15 @@
           margin-top: 3rem;
         "
       >
+      <!----------------------image------------------------>
         <img src="../assets/images/Video.png" class="card-img-top" alt="..." />
+      <!----------------------/image------------------------>
+    
         <div class="card-body d-flex justify-content-center align-items-center">
           <div class="container text-center">
             <div class="row">
               <div class="col">
+                <!----------------title------------------->
                 <h4
                   style="
                     color: #ffffff;
@@ -80,6 +84,8 @@
                 >
                   The Batman
                 </h4>
+                <!----------------/title------------------->
+
                 <h6
                   style="
                     color: #ffffff;
@@ -90,6 +96,7 @@
                 >
                   <i class="bi bi-film"></i> Action • Crime
                 </h6>
+
                 <h6
                   style="
                     color: #ffffff;
@@ -98,8 +105,10 @@
                     padding-bottom: 0.25rem;
                   "
                 >
+
                   <i class="bi bi-star-fill" style="color: yellow"></i> 9.0
                 </h6>
+                
               </div>
 
               <!-- ======= Like Shear button start =========== -->
