--- a/pages/topratedpage.html
+++ b/pages/topratedpage.html
@@ -10,7 +10,7 @@
       integrity="sha512-..."
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/topratedpage.css" />
+    <link rel="stylesheet" href="../assets/styles/topratedpage.css" />
   </head>
   <body>
     <!-- navbar -->
@@ -41,71 +41,91 @@
     </div>
 
     <!-- sidebar -->
-    <div class="sidebar" id="sidebar"></div>
 
-    <!-- containar -->
-    <!-- <div class="containar">
-      <div class="content-containar">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
-        perspiciatis molestiae maxime tempora? Minus sequi sit dignissimos, quia
-        iusto, laboriosam eos aperiam, ullam voluptatem a voluptate nesciunt
-        voluptatibus ipsum illo!
+    <div>
+      <div class="sidebar" id="sidebar"></div>
+
+      <!-- containar -->
+      <!-- <div class="containar">
+        <div class="content-containar">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+          perspiciatis molestiae maxime tempora? Minus sequi sit dignissimos, quia
+          iusto, laboriosam eos aperiam, ullam voluptatem a voluptate nesciunt
+          voluptatibus ipsum illo!
+        </div>
+      </div> -->
+
+      <div class="top-rated">
+        <h2>Top Rated</h2>
+
+        <div class="movie-grid">
+          <section id="main-section">
+            <!-- <div class="movie-card">
+              <img
+                src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24748048.jpg"
+                alt="The Shawshank Redemption"
+              />
+              <div class="content">
+                <h3>The Shawshank Redemption</h3>
+                <div class="rating">&#9733; 9.2</div>
+                <div class="genre">Drama</div>
+              </div>
+            </div>
+            <div class="movie-card">
+              <img
+                src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24748048.jpg"
+                alt="The Godfather"
+              />
+              <div class="content">
+                <h3>The Godfather</h3>
+                <div class="rating">&#9733; 9.2</div>
+                <div class="genre">Crime • Drama</div>
+              </div>
+            </div>
+            <div class="movie-card" id="movie-card">
+              <img
+                id="movie-image"
+                src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24748048.jpg"
+                alt="The Dark Knight"
+              />
+              <div class="content">
+                <h3 id="movie-title">The Dark Knight</h3>
+                <div class="rating">&#9733; 9.0</div>
+                <div class="genre">Action • Crime</div>
+              </div>
+            </div> -->
+          </section>
+        <!-- </div>
+        <div class="movie-grid">
+          <div class="movie-cardb">
+            <img
+              src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24748048.jpg"
+              alt="Jumanji: The Next Level"
+            />
+            <div class="content">
+              <h3>Jumanji: The Next Level</h3>
+              <div class="rating">&#9733; 4.6</div>
+              <div class="genre">Action • Movie</div>
+            </div>
+          </div>
+        </div>
+        <div class="movie-grid">
+          <div class="movie-cardb">
+            <img
+              src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24748048.jpg"
+              alt="Jumanji: The Next Level"
+            />
+            <div class="content">
+              <h3>Jumanji: The Next Level</h3>
+              <div class="rating">&#9733; 4.6</div>
+              <div class="genre">Action • Movie</div>
+            </div>
+          </div>
+        </div>
+        <!-- <div id="main-section"></div> -->
       </div>
     </div> -->
 
-    <div class="top-rated">
-      <h2>Top Rated</h2>
-
-      <div class="movie-grid">
-        <div class="movie-card">
-          <img
-            src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24748048.jpg"
-            alt="The Shawshank Redemption"
-          />
-          <div class="content">
-            <h3>The Shawshank Redemption</h3>
-            <div class="rating">&#9733; 9.2</div>
-            <div class="genre">Drama</div>
-          </div>
-        </div>
-        <div class="movie-card">
-          <img
-            src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24748048.jpg"
-            alt="The Godfather"
-          />
-          <div class="content">
-            <h3>The Godfather</h3>
-            <div class="rating">&#9733; 9.2</div>
-            <div class="genre">Crime • Drama</div>
-          </div>
-        </div>
-        <div class="movie-card">
-          <img
-            src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24748048.jpg"
-            alt="The Dark Knight"
-          />
-          <div class="content">
-            <h3>The Dark Knight</h3>
-            <div class="rating">&#9733; 9.0</div>
-            <div class="genre">Action • Crime</div>
-          </div>
-        </div>
-      </div>
-      <div class="movie-grid">
-        <div class="movie-cardb">
-          <img
-            src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24748048.jpg"
-            alt="Jumanji: The Next Level"
-          />
-          <div class="content">
-            <h3>Jumanji: The Next Level</h3>
-            <div class="rating">&#9733; 4.6</div>
-            <div class="genre">Action • Movie</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <script src="/topratedpage.js"></script>
+    <script src="../assets/scripts/topratedpage.js"></script>
   </body>
 </html>
