--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineMax Registration</title>
     <link rel="stylesheet" href="../assets/styles/signUp.css">
-    <script type="module" src="../assets/scripts/firebaseauth.js"></script>
+    <script type="module" src="../assets/scripts/signUp.js"></script>
 
 </head>
 <body>
