--- a/pages/login.html
+++ b/pages/login.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineMax Registration</title>
     <link rel="stylesheet" href="../assets/styles/login.css">
-    <script type="module" src="../assets/scripts/firebaseauth.js"></script>
+    <script type="module" src="../assets/scripts/logIn.js"></script>
+
+
 </head>
 <body>
     <div class="container">
@@ -23,15 +25,15 @@
                 <h2>LogIn</h2>
                 <form>
                     <div class="input-group">
-                        <label for="name">Full Name</label>
-                        <input type="text" id="name" name="name" placeholder="Enter your name">
+                        <label for="email">Email</label>
+                        <input type="email" id="signInEmail"  placeholder="Enter your Email">
                     </div>
                     <div class="input-group">
-                        <label for="email">Password</label>
-                        <input type="email" id="email" name="email" placeholder="Enter your password">
+                        <label for="password">Password</label>
+                        <input type="password" id="signInPassword"  placeholder="Enter your password">
                     </div>
                 
-                    <button type="submit" class="login-button">Login</button><br><br>
+                    <button type="button" id="submitLogin" class="login-button">Login</button><br><br>
                     <p class="login-text">Don't have an account? <a href="./signUp.html">Register</a></p>
                 </form>
                 <div id="loginMessage" class="messageDiv" style="display: none; background-color: green; color: white; "></div>
@@ -39,5 +41,7 @@
             </div>
         </div>
     </div>
+
+
 </body>
 </html>
