--- a/pages/topratedpage.html
+++ b/pages/topratedpage.html
@@ -31,13 +31,13 @@
           <input  id="search-input" type="text" placeholder="Search ..." />
           <button id="search-button">Search</button>
         </div>
-
+<!-- ................... -->
         <div class="profile-container">
           <div class="search-icon">
             <span class="fas fa-search"> </span>
           </div>
           <div>
-            <img id="user-picture" src="user.png" alt="" />
+            <img id="user-picture" src="/assets/images/user.png" alt="" />
             <i class="fas fa-caret-down"></i>
           </div>
         </div>
@@ -131,6 +131,14 @@
       </div>
     </div>
     
+    <!-- <a "./Movie detiles.html">
+    <img src="${anime.imageUrl}" alt="${anime.title}">
+      <div>
+        <h2>${anime.title}</h2>
+      </a>
+        <p>Episodes: ${anime.episodes}</p>
+        <div class="rating">&#9733; 9.2</div>
+      </div> -->
 
     <script src="../assets/scripts/topratedpage.js"></script>
   </body>
